--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -331,7 +331,7 @@ jobs:
         run: |
           # --- jfrog Maven Build
           export M2_HOME=/usr/share/maven
-          ./jfrog rt mvn "clean install -Dartifactory.publish.artifacts=true -Dproject.version=$GITHUB_SHA -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID
+          ./jfrog rt mvn "clean install -Dproject.version=$GITHUB_SHA -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID
 
           ./jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
           ./jfrog rt build-publish $GITHUB_REPOSITORY $GITHUB_RUN_ID
@@ -371,6 +371,7 @@ jobs:
 
           # --- Upload Helm Chart Artifact to Artifactory
           ./jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
+
           # -- build publish
           ./jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_WORKFLOW $GITHUB_RUN_ID |& tee publish.txt
 
