--- a/codefresh.yml
+++ b/codefresh.yml
@@ -112,13 +112,13 @@ steps:
     - export JF_XRAY_MSG=$(jq ".summary.message" results.json)
     - echo "$JF_XRAY_MSG"
     - echo "$JF_XRAY_ALERTS"
-    - export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fjldeen~2Fchattybot/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
+    - export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fspring-boot-websocket-chat-demo/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
     - if [[ $JF_XRAY_ALERTS -eq 0 ]]; then slackStyle=good; else slackStyle=danger; fi
     - codefresh annotate image jldeen/chattybot:$CF_BRANCH_TAG_NORMALIZED-$CF_SHORT_REVISION --label JF_XRAY_ALERTS=$JF_XRAY_ALERTS --label JF_XRAY_MSG=$JF_XRAY_MSG --label JF_XRAY_RPT=$JF_XRAY_RPT
     - cf_export JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
     - cf_export JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
     - cf_export JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
-    - cf_export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fjldeen~2Fchattybot/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
+    - cf_export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fspring-boot-websocket-chat-demo/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
     - cf_export slackStyle=$slackStyle
     on_success:
       metadata:
@@ -138,7 +138,7 @@ steps:
     image: tutum/curl
     stage: "test"
     commands:
-      - curl -X POST --data-urlencode 'payload={"text":"Jfrog Artifactory Build ${{CF_BUILD_ID}} Information","attachments":[{"fallback":"JFrog Artifactory Build ${{CF_BUILD_ID}} Information","color":"#36a64f","author_link":"'$JF_BUILD'","title":"JFrog Build Artifacts","title_link":"'$JF_BUILD'","text":"Build Artifacts for ${{CF_BUILD_ID}}","fields":[{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog Artifactory Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
+      - curl -X POST --data-urlencode 'payload={"text":"Jfrog Artifactory Codefresh Build ${{CF_BUILD_ID}} Information","attachments":[{"fallback":"JFrog Artifactory Codefresh Build ${{CF_BUILD_ID}} Information","color":"#36a64f","author_link":"'$JF_BUILD'","title":"JFrog Build Artifacts","title_link":"'$JF_BUILD'","text":"Build Artifacts for ${{CF_BUILD_ID}}","fields":[{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog Artifactory Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
 
   SendScanToSlack:
     title: Send xray info to Slack
@@ -147,7 +147,7 @@ steps:
     shell: bash
     commands:
     - echo "'$JF_SCAN_FAIL'"
-    - curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for Build ${{CF_BUILD_ID}}","attachments":[{"fallback":"JFrog XRay Scan Report for Build ${{CF_BUILD_ID}}","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build ${{CF_BUILD_ID}}","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
+    - curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","attachments":[{"fallback":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build ${{CF_BUILD_ID}}","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
     # - if [[ $JF_SCAN_FAIL == *true* ]]; then exit 1; else exit 0; fi
 
   askForPermission:
