--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -331,7 +331,7 @@ jobs:
         run: |
           # --- jfrog Maven Build
           export M2_HOME=/usr/share/maven
-          ./jfrog rt mvn "clean install -Dproject.version=$GITHUB_SHA -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID
+          ./jfrog rt mvn "clean install -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
 
           ./jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
           ./jfrog rt build-publish $GITHUB_REPOSITORY $GITHUB_RUN_ID
@@ -348,7 +348,9 @@ jobs:
       - name: "build/push chattybot"
         run: |
           echo ${{ secrets.ART_PASS }} | docker login $artDockerURL -u $ART_USER --password-stdin && echo "jfrog docker login successful"
+
           docker build . -t $artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}
+
           docker push $artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}
 
       # helm lint
@@ -363,20 +365,19 @@ jobs:
       - name: "publish build info to artifactory"
         run: |
           # --- JFrog Publish Build Info to Artifactory
-          #./jfrog rt build-add-dependencies $GITHUB_WORKFLOW $GITHUB_RUN_ID "target/*.jar"
-          ./jfrog rt build-collect-env $GITHUB_WORKFLOW $GITHUB_RUN_ID
+          ./jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
 
           # --- Jfrog Docker Push
-          ./jfrog rt docker-push --server-id=$SERVER_ID --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID "$artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}" docker-dev
+          ./jfrog rt docker-push --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID "$artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}" docker-dev
 
           # --- Upload Helm Chart Artifact to Artifactory
-          ./jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
+          ./jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
 
           # -- build publish
-          ./jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_WORKFLOW $GITHUB_RUN_ID |& tee publish.txt
+          ./jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_REPOSITORY $GITHUB_RUN_ID |& tee publish.txt
 
           # --- Xray Scan
-          ./jfrog rt build-scan --server-id=$SERVER_ID $GITHUB_WORKFLOW $GITHUB_RUN_ID | tee results.json
+          ./jfrog rt build-scan --server-id=$SERVER_ID $GITHUB_REPOSITORY $GITHUB_RUN_ID | tee results.json
 
       - name: "slack build trigger"
         run: |
@@ -401,31 +402,30 @@ jobs:
 
           curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","attachments":[{"fallback":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report for GitHub Actions","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build '$GITHUB_RUN_ID'","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{ secrets.SLACK_WEBHOOK_URL}} > /dev/null 2>&1 && echo "Slack XRay Message Posted"
           #if [[ "'$JF_SCAN_FAIL'" = *true* ]]; then exit 1; else exit 0; fi
-  # deployMicroservicesDEV:
-  #   runs-on: self-hosted
-  #   needs: buildImages
-  #   env:
-  #     nameSpace: jfrog
-  # steps:
-  #     - name: "configure deployment environment"
-  #       run: |
-  #         # set for this step
-  #         AKS_CLUSTER=$(az aks list --resource-group $resourceGroup --query [0].name -o tsv)
-  #         # persist env vars
-  #         echo "::set-env name=AKS_CLUSTER::$(az aks list --resource-group $resourceGroup --query [0].name -o tsv)"
-  #         echo "::set-env name=INGRESS::$(az aks show -n $AKS_CLUSTER -g $resourceGroup --query addonProfiles.httpApplicationRouting.config.HTTPApplicationRoutingZoneName -o tsv)"
-  #         # acr/container registry variables
-  #         # echo "::set-env name=acrName::$(az acr list -g $resourceGroup -o tsv --query "[0].name")"
-  #         echo "::set-env name=CONTAINER_REGISTRY::$(az acr list -g $resourceGroup -o tsv --query [0].loginServer)"
-  #         echo "::set-env name=pictures::$(az storage account list -g $resourceGroup --query [0].primaryEndpoints.blob -o tsv)"
-  #     - name: "helm install login api"
-  #       run: |
-  #         # spring deploy
-  #         helm upgrade --install my-tt-login -f $tailwindChartValues --namespace=$nameSpace --set ingress.hosts={$INGRESS} --set image.repository=$CONTAINER_REGISTRY/login.api --set image.tag=$GITHUB_SHA --set inf.storage.profileimages=${pictures}profiles-list $tailwindCharts/login-api
-  #     - name: "Label all pods for network policy"
-  #       run: |
-  #         # add label
-  #         kubectl label -n twt pods --all role=spring-app --overwrite=true
+
+  deployMicroservicesDev:
+    runs-on: self-hosted
+    needs: buildImages
+    env:
+      nameSpace: jfrog
+    steps:
+      - name: "configure deployment environment"
+        run: |
+          # set for this step
+          AKS_CLUSTER=$(az aks list --resource-group $resourceGroup --query [0].name -o tsv)
+          # persist env vars
+          echo "::set-env name=AKS_CLUSTER::$(az aks list --resource-group $resourceGroup --query [0].name -o tsv)"
+          echo "::set-env name=INGRESS::$(az aks show -n $AKS_CLUSTER -g $resourceGroup --query addonProfiles.httpApplicationRouting.config.HTTPApplicationRoutingZoneName -o tsv)"
+
+      - name: "helm install chattybot dev"
+        run: |
+          # spring deploy
+          helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/charts/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=ghchattybot-dev.k8s.az.jessicadeen.com --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
+
+      - name: "Label all pods for network policy"
+        run: |
+          # add label
+          kubectl label -n $nameSpace pods --all role=spring-app-dev --overwrite=true
   #
   #     - name: "Notes"
   #       run: |
