--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -393,7 +393,7 @@ jobs:
 
           JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
           JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
-          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjldeen%2Fspring-boot-websocket-chat-demo%2F$GITHUB_RUN_ID"
+          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjldeen~2Fspring-boot-websocket-chat-demo/$GITHUB_RUN_ID"
 
           if [[ $JF_XRAY_ALERTS -eq 0 ]]; then
             slackStyle=good && echo "No Xray Scan alerts found"
@@ -401,7 +401,7 @@ jobs:
             slackStyle=danger && echo "Xray scan alerts found"
           fi
 
-          curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","attachments":[{"fallback":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report for GitHub Actions","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build '$GITHUB_RUN_ID'","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{ secrets.SLACK_WEBHOOK_URL}} > /dev/null 2>&1 && echo "Slack XRay Message Posted"
+          curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","attachments":[{"fallback":"JFrog XRay Scan Report for GitHub Run '$GITHUB_RUN_ID'","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report for GitHub Actions","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for GitHub Actions run '$GITHUB_RUN_ID'","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{ secrets.SLACK_WEBHOOK_URL}} > /dev/null 2>&1 && echo "Slack XRay Message Posted"
           #if [[ "'$JF_SCAN_FAIL'" = *true* ]]; then exit 1; else exit 0; fi
 
   deployMicroservicesDev:
